--- a/index.html
+++ b/index.html
@@ -4,4 +4,17 @@
 
 <div id="chart-element"  style="height: 500px"></div>
 
+<svg id='time-series' style='height: 300px; width: 500px;'>
+  <defs>
+    <linearGradient id="area-gradient"
+                    x1="0%" y1="0%"
+                    x2="0%" y2="100%">
+      <stop offset="0%" stop-opacity="0.3" stop-color="#fff" />
+      <stop offset="100%" stop-opacity="0" stop-color="#1a9af9" />
+    </linearGradient>
+  </defs>
+</svg>
+
+<link rel="stylesheet" type="text/css" href="style.css"/>
+
 <script src="chart.js"></script>
