--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     </linearGradient>
   </defs>
 </svg>
+<script src="legend.js"></script>
+<script src="callout.js"></script>
 <script src="chart.js"></script>
 </body>
