--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     </linearGradient>
   </defs>
 </svg>
+
+<script src="tradedHours.js"></script>
 <script src="legend.js"></script>
 <script src="callout.js"></script>
 <script src="chart.js"></script>
