--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <script src="node_modules/d3/dist/d3.js"></script>
   <script src="node_modules/d3fc/build/d3fc.js"></script>
   <script src="node_modules/d3-svg-legend/d3-legend.js"></script>
+  <script src="//unpkg.com/babel-standalone@6/babel.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
@@ -23,7 +24,7 @@
   </defs>
 </svg>
 
-<script src="legend.js"></script>
-<script src="callout.js"></script>
-<script src="chart.js"></script>
+<script src="legend.js" type='text/babel'></script>
+<script src="callout.js" type='text/babel'></script>
+<script src="chart.js" type='text/babel'></script>
 </body>
