--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!doctype html>
+
 <head>
   <script src="node_modules/d3/dist/d3.js"></script>
   <script src="node_modules/d3fc/build/d3fc.js"></script>
-  <script src="node_modules/d3-svg-legend/d3-legend.js"></script>
   <script src="//unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
-<div id="chart-element"  style="height: 500px"></div>
 
-<div id='container'>
-  <svg id='legend'></svg>
-</div>
+  <div id="chart-element" style="height: 500px"></div>
 
-<svg id='time-series' style='height: 300px; width: 500px;'>
-  <defs>
-    <linearGradient id="area-gradient"
-                    x1="0%" y1="0%"
-                    x2="0%" y2="100%">
-      <stop offset="0%" stop-opacity="0.3" stop-color="#fff" />
-      <stop offset="100%" stop-opacity="0" stop-color="#1a9af9" />
-    </linearGradient>
-  </defs>
-</svg>
+  <svg>
+    <defs>
+      <linearGradient id="area-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+        <stop offset="0%" stop-opacity="0.3" stop-color="#fff" />
+        <stop offset="100%" stop-opacity="0" stop-color="#1a9af9" />
+      </linearGradient>
+    </defs>
+  </svg>
 
-<script src="legend.js" type='text/babel'></script>
-<script src="callout.js" type='text/babel'></script>
-<script src="chart.js" type='text/babel'></script>
+  <script src="legend.js" type='text/babel'></script>
+  <script src="callout.js" type='text/babel'></script>
+  <script src="util.js" type='text/babel'></script>
+  <script src="chart.js" type='text/babel'></script>
 </body>
