moved babel to package.json

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="node_modules/d3/dist/d3.js"></script>
   <script src="node_modules/d3fc/build/d3fc.js"></script>
-  <script src="//unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="node_modules/babel-standalone/babel.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
