--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div id="chart-element" style="height: 500px"></div>
 
-  <svg>
+  <svg style="width: 0; height: 0">
     <defs>
       <linearGradient id="area-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
         <stop offset="0%" stop-opacity="0.3" stop-color="#fff" />
